<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.mads.madses.LoginInfoFragment"
    android:orientation="vertical"
    android:baselineAligned="false">


    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <EditText
        android:id="@+id/edtxt_register_fname"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:hint="First Name"
        android:ems="10"
        android:maxLines="1"
        android:maxLength="20"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <EditText
        android:id="@+id/edtxt_register_lname"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:hint="@string/lname"
        android:ems="10"
        android:maxLines="1"
        android:maxLength="20"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <EditText
        android:id="@+id/edtxt_register_email"
        android:hint="@string/email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:maxLines="1"
        android:maxLength="20"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <EditText
        android:id="@+id/edtxt_register_password"
        android:hint="@string/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:maxLines="1"
        android:maxLength="20"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <EditText
        android:id="@+id/edtxt_register_retype_password"
        android:hint="@string/retypepass"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:maxLines="1"
        android:maxLength="20"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <Button
        android:id="@+id/btn_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
