<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:background="#FFCE40">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="MADS"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#808cff"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="ES"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#808cff"
            android:textSize="70sp" />
    </RelativeLayout>

    <Space
        android:layout_width="20sp"
        android:layout_height="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:background="#963FD5"
        android:orientation="vertical">

        <Space
            android:layout_width="20px"
            android:layout_height="50px" />

        <EditText
            android:id="@+id/edtxt_login_email"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1" />

        <Space
            android:layout_width="20px"
            android:layout_height="20px" />


        <EditText
            android:id="@+id/edtxt_login_password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1" />

        <Space
            android:layout_width="20px"
            android:layout_height="40px" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signin" />

        <Space
            android:layout_width="20px"
            android:layout_height="50px" />

        <Button
            android:id="@+id/btn_login_newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/newUser" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#58E000"></RelativeLayout>
</LinearLayout>
